updated resume and fixed text alignment on hero page

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,44 @@
   src: url('./fonts/overcame-outline.woff');
 }
 
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.animate-fade-in {
+  animation: fade-in 1s ease-in;
+}
+
+.typewriter {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 3px solid black;
+  animation: typing 2s steps(20, end), blink 0.6s step-end infinite;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
